--- a/requirements.txt
+++ b/requirements.txt
@@ -1,31 +1,41 @@
+appdirs==1.4.4
+attrs==20.3.0
 backcall==0.2.0
+black==20.8b1
 bleach==3.3.0
 certifi==2020.12.5
 cffi==1.14.5
 chardet==4.0.0
+click==7.1.2
 colorama==0.4.4
 cryptography==3.4.7
 decorator==4.4.2
 docutils==0.16
 idna==2.10
-importlib-metadata==3.7.3
-ipdb==0.13.7
-ipython==7.21.0
+importlib-metadata==3.9.1
+iniconfig==1.1.1
+ipython==7.22.0
 ipython-genutils==0.2.0
 jedi==0.18.0
 jeepney==0.6.0
 keyring==23.0.1
+mypy-extensions==0.4.3
 packaging==20.9
 parso==0.8.1
+pathspec==0.8.1
 pexpect==4.8.0
 pickleshare==0.7.5
 pkginfo==1.7.0
+pluggy==0.13.1
 prompt-toolkit==3.0.18
 ptyprocess==0.7.0
+py==1.10.0
 pycparser==2.20
 Pygments==2.8.1
 pyparsing==2.4.7
+pytest==6.2.2
 readme-renderer==29.0
+regex==2021.3.17
 requests==2.25.1
 requests-toolbelt==0.9.1
 rfc3986==1.4.0
@@ -35,6 +45,8 @@ toml==0.10.2
 tqdm==4.59.0
 traitlets==5.0.5
 twine==3.4.1
+typed-ast==1.4.2
+typing-extensions==3.7.4.3
 urllib3==1.26.4
 wcwidth==0.2.5
 webencodings==0.5.1
