--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "/home/victorpereira/projects/zeroncy/.venv/bin/python3.9"
+    "python.pythonPath": ".venv/bin/python"
 }
